--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,23 @@ body {
 #imgGameOver {
     margin-top: 100px;
 }
+
+.logo {
+    width: 10px;
+    height: 10px;
+    margin-top: 15px;
+    margin-right: 5px;
+
+}
+
+.nome {
+    font-family: 'Ubuntu', sans-serif;
+    font-style: italic;
+    font-size: x-small;
+    color: #ffffff;
+}
+
+P {
+    font-family: 'Ubuntu', sans-serif;
+    color: #ffffff;
+}
